feat: add loading spinner for landing page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <title>Ramu Dev</title>
   </head>
   <body>
+    <div class="engine-loader">
+      <div class="engine-wrapper">
+        <div class="engine">
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="blade"></div>
+          <div class="pivot"></div>
+        </div>
+      </div>
+      <div class="engine-shadow"></div>
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
