fix: change box-sizing to content-box
Note: this prevents layout shift on engine

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         height: var(--engine-size);
         border: var(--engine-border-width) solid var(--engine-border-color);
         border-radius: 50%;
+        box-sizing: content-box;
         animation: spin-start 8s cubic-bezier(0.6, 0, 0.25, 0.25) forwards,
           spin-end 12s linear 8s infinite;
         box-shadow: inset 0 0 10px var(--engine-background-color);
