fix: remove loco scroll and use normal scroll
Note:
- add header update based on section
- adjust container styles

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </style>
   </head>
   <body>
-    <!-- spinner while the assets load -->
+    <!-- spinner while the assets load (will be removed once react app loads)-->
     <div id="spinner-container">
       <div class="engine-loader">
         <div class="engine-wrapper">
