feat: add meta tags for seo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Basic meta tags -->
+    <meta
+      name="description"
+      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+    />
+    <meta
+      name="keywords"
+      content="ramu, portfolio, bhargava ramu, dev, frontend developer, designer"
+    />
+
+    <!-- og tags -->
+    <meta property="og:title" content="Bhargava Ramu" />
+    <meta
+      property="og:description"
+      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+    />
+    <meta property="og:image" content="https://ramu.me/cover.png" />
+    <meta property="og:url" content="https://ramu.me" />
+    <meta property="og:type" content="website" />
+
+    <!-- twitter card-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bhargava Ramu" />
+    <meta
+      name="twitter:description"
+      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+    />
+    <meta name="twitter:image" content="https://ramu.me/cover.png" />
+
+    <!-- cannonical -->
+    <link rel="canonical" href="https://ramu.me" />
+
+    <!-- favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon_io/site.webmanifest" />
+
+    <!-- fonts and viewport -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +63,23 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramu Dev</title>
+
+    <meta name="robots" content="index, follow" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Bhargava Ramu",
+        "url": "https://ramu.me",
+        "image": "https://ramu.me/cover.png",
+        "sameAs": [
+          // include your social media links here
+        ],
+        "jobTitle": "Frontend developer and designer"
+      }
+    </script>
+
+    <title>Bhargava Ramu</title>
 
     <style>
       :root {
