fix: update meta tag description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Basic meta tags -->
     <meta
       name="description"
-      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+      content="Creating aesthetically pleasing digital experiences as a front-end developer."
     />
     <meta
       name="keywords"
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Bhargava Ramu" />
     <meta
       property="og:description"
-      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+      content="Creating aesthetically pleasing digital experiences as a front-end developer."
     />
     <meta property="og:image" content="https://ramu.me/cover.png" />
     <meta property="og:url" content="https://ramu.me" />
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="Bhargava Ramu" />
     <meta
       name="twitter:description"
-      content="Bhargava Ramu - Frontend developer with eye for aesthetics"
+      content="Creating aesthetically pleasing digital experiences as a front-end developer."
     />
     <meta name="twitter:image" content="https://ramu.me/cover.png" />
 
