fix: change engine cover color

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       :root {
         --engine-size: 9rem; /* Nearest multiple of 16 for 150px */
         --engine-border-width: 1rem; /* Nearest multiple of 8 for 16px */
-        --engine-border-color: #555;
+        --engine-border-color: #dedfe3;
         --engine-background-color: #0af;
         --blade-width: 12%;
         --blade-height: 48%;
